2024-11-26 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Adapt to changes in svconnector, resolves #14
    * Verify compatibility with TYPO3 13 ELTS, resolves #13
    * Move tests to typo3/testing-framework
    * Move documentation to PHP-based rendering

2024-06-16 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Clean up code with Rector, drop compatibility with PHP 7.4 and 8.0, references #13

2024-05-10 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure compatibility with TYPO3 13, resolves #13

2023-08-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Verify compatibility with PHP 8.2
	* Release version 4.1.0

2023-05-02 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update example code for service instanciation, resolves #12
	* Release version 4.0.1

2022-12-27 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 4.0.0

2022-12-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 12, resolves #10
	* Ensure compatibility with PHP 8.1

2022-12-18 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Switch to new connector service registration API, resolves #11

2021-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 3.0.0

2021-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with PHP 8

2021-04-06 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Ensure compatibility with TYPO3 11, drop support for TYPO3 8 and 9

2021-02-02 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Use strictly first row as header no matter how many rows are skipped, resolves #9
	* Release version 2.4.1

2020-05-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 2.4.0

2020-04-12 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Implement new configuration check API, resolves #7
	* Update documentation settings, resolves #8
	* Avoid critical failure when temporary file cannot be deleted, resolves #6
