@@ -1,3 +1,8 @@
+2024-12-02 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    * Support passing headers and method when fetching data
+    * Restructure documentation
+
 2024-11-26 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Adapt to changes in svconnector, resolves #14
